--- a/.env.example
+++ b/.env.example
@@ -8,12 +8,12 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=pgsql
+DB_HOST=autorack.proxy.rlwy.net
+DB_PORT=34729
+DB_DATABASE=railway
+DB_USERNAME=postgres
+DB_PASSWORD=ClLJVzuJFpGkijqqMqEzWrWYsvEffyQp
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
